<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:text="@string/title_activity_bletest"
        android:textStyle="bold" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <RadioGroup
		  android:id="@+id/radioGroup"
		  android:layout_width="wrap_content"  
		  android:layout_height="wrap_content"  
		  android:orientation="horizontal">
        <RadioButton 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtest"
        android:checked="true"
        android:text="@string/txtest"/>
        <RadioButton 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rxtest"
        android:text="@string/rxtest"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channelstring"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/patternstring"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/send"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/starttest" />

         <Button
        android:id="@+id/stop"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/stoptest" />
    </LinearLayout>
</LinearLayout>
